# Textiles

./: .gitignore  BadNPAttempt  CMakeCache.txt  CMakeLists.txt  FromSSE  FromSSE.cpp  FromSSENeg1.cpp  GMSSEs.cpp  Makefile  MoreOdense.cpp  NegativeOneThree.mat  NegativeTwoSeven.mat  ODFATesting.cpp  Odense.cpp  Odense2.cpp  OneOneFour.cpp  OneOneTwo.cpp  SSEGenerator.cpp  SSEGenerator.h  ThreeByThreeA.cpp  ThreeByThreeASquared.cpp  ThreeByThreeB.cpp  ThreeByThreeBSquared.cpp  ThreeByThreeC.cpp  conjugaciescube.txt  courses.txt  ggraph.txt  gmNew21  gmNew21.cpp  gmNew21.txt  gmNew2143  gmNew2143.cpp  gmNew231  gmNew231.cpp  gmNew2341  gmNew2341.cpp  gmNewa2143d231.cpp  gmNewa21d231  gmNewa21d231.cpp  gmNewa231d231  (+18 more)
Logs/Stuff/: Neg13Small.mat  Neg14Small.mat  Neg21Small.mat  Neg23Small.mat  conjugaciescube.txt
